# fspulse

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  acknowledgements.html  advanced.html  build.rs  cli.html  concepts.html  configuration.html  database.html  development.html  dircheck.db  docker.html  getting_started.html  index.html  interactive_mode.html  introduction.html  license.html  mcp.html  print.html  query.html  roadmap.html  scanning.html  searcher-c2a407aa.js  searchindex-01eeff74.js  searchindex-0837a35e.js  searchindex-1945b716.js  searchindex-1f590892.js  searchindex-25c08cfd.js  searchindex-2696134d.js  searchindex-7ecc3b66.js  searchindex-a1e36410.js  searchindex-ac2fac39.js  searchindex-ace26b1e.js  (+20 more)
.beads/: issues.jsonl
.cargo/: config.toml
.claude/: REACT-SHADCN-MIGRATION.md
.github/workflows/: artifact-cleanup.yml  ci.yml  deploy-mdbook.yml  docker-build.yml  docker.yml  docs.yml  release-notes.yml  test.yml
assets/brand/: asset-index.html
cli/: query.html  reports.html
docker/: entrypoint.sh
docs/: book.toml
docs/book/: 404.html  concepts.html  configuration.html  database.html  development.html  getting_started.html  interactive_mode.html  introduction.html  print.html  query.html  roadmap.html  scanning.html  searchindex.js  validators.html
docs/src/: SUMMARY.md  acknowledgements.md  advanced.md  cli.md  concepts.md  configuration.md  database.md  development.md  docker.md  getting_started.md  interactive_mode.md  introduction.md  license.md  mcp.md  query.md  roadmap.md  scanning.md  validators.md  web_ui.md
docs/src/cli/: query.md  reports.md
docs/src/getting_started/: building.md  first_steps.md  installation.md
docs/src/mcp/: prompts.md  setup.md  tools.md
docs/src/web_ui/: alerts.md  browse.md  dashboard.md  data_explorer.md  explore.md  history.md  home.md  insights.md  integrity.md  monitor.md  scans.md  settings.md  setup.md  tasks.md  trends.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  Sidebar.tsx
frontend/src/contexts/: ScanManagerContext.tsx  ScrollContext.tsx  TaskContext.tsx
frontend/src/hooks/: useBrowseCache.ts  useOldVirtualTree.ts  useTheme.ts  useVirtualTree.ts
frontend/src/lib/: api.ts  dateUtils.ts  formatUtils.ts  pathUtils.ts  types.ts
frontend/src/pages/: ActivityPage.tsx  AlertsPage.tsx  BrowsePage.tsx  ExplorePage.tsx  HomePage.tsx  InsightsPage.tsx  MonitorPage.tsx  ScanPage.tsx  SettingsPage.tsx
getting_started/: building.html  first_steps.html  installation.html
mcp/: prompts.html  setup.html  tools.html
scripts/: build.sh  dev.sh  release.sh
src/: alerts.rs  analysis.rs  analytics.rs  changes.rs  cli.rs  config.rs  database.rs  dirscan.rs  entries.rs  error.rs  hash.rs  indent.rs  item_identity.rs  item_ops.rs  item_version.rs  items.rs  main.rs  progress.rs  reports.rs  root_paths.rs  roots.rs  scan.rs  scan_machine.rs  scan_manager.rs  scanner.rs  scans.rs  schedules.rs  schema.rs  server.rs  sort.rs  task_manager.rs  undo_log.rs  utils.rs  watcher.rs
src/api/: ffi.rs  mod.rs
src/api/routes/: alerts.rs  app.rs  database.rs  integrity.rs  items.rs  mod.rs  query.rs  roots.rs  scans.rs  schedules.rs  server.rs  settings.rs  state.rs  tasks.rs
src/db/: mod.rs
src/db/migration/: maintenance.rs  mod.rs  (+1 more)
src/explore/: column_frame.rs  domain_model.rs  explorer.rs  filter_frame.rs  filter_popup.rs  filter_window.rs  grid_frame.rs  input_box.rs  limit_widget.rs  message_box.rs  mod.rs  path_popup.rs  utils.rs  view.rs
src/hierarchy/: hierarchy_id.rs  mod.rs
src/integrity/: analysis.rs  file_guard.rs  hash_analysis.rs  hash_version.rs  integrity_api.rs  mod.rs  val_analysis.rs  val_version.rs
src/mcp/: auth.rs  formatting.rs  help.rs  mod.rs  params.rs  tools.rs
src/progress/: cli.rs  mod.rs  state.rs  web.rs
src/queries/: columns.rs  filter.rs  filters.rs  mod.rs  order.rs  parser.pest  query.pest  query.rs  show.rs
src/query/: columns.rs  filter.rs  mod.rs  order.rs  process.rs  query.pest  show.rs
src/schema/: base.rs  mod.rs  v10_to_v11.rs  v11_to_v12.rs  v12_to_v13.rs  v14_to_v15.rs  v15_to_v16.rs  v16_to_v17.rs  v17_to_v18.rs  v18_to_v19.rs  v19_to_v20.rs  v20_to_v21.rs  v22_to_v23.rs  v2_to_v3.rs  v3_to_v4.rs  v4_to_v5.rs  v5_to_v6.rs  v6_to_v7.rs  v7_to_v8.rs  v8_to_v9.rs  v9_to_v10.rs
src/task/: checkpoint_task.rs  compact_database_task.rs  mod.rs  progress.rs  scan_task.rs  settings.rs  task_status.rs  task_type.rs  traits.rs
src/validate/: claxon.rs  image.rs  lopdf.rs  mod.rs  validator.rs
src/validators/: claxon.rs  image.rs  lopdf.rs  mod.rs  validator.rs
src/web/: mod.rs  scan_manager.rs  server.rs
tests/fixtures/: fspulse.db  generate_testdb.py
web_ui/: alerts.html  browse.html  data_explorer.html  explore.html  history.html  home.html  insights.html  integrity.html  monitor.html  scans.html  settings.html  setup.html  tasks.html  trends.html
(+185 files in other folders)
