[package]
name = "fspulse"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
claxon = "0.4"
console = "0.15"
crossbeam-channel = "0.5"
dialoguer = { version = "0.11", features = ["history"] }
dunce = "1.0"
directories = "6.0"
figment = { version = "0.10", features = ["toml"] }
flexi_logger = "0.29"
hex = "0.4"
indicatif = "0.17"
image = "0.25"
log = "0.4"
lopdf = "0.36"
md-5 = "0.10"
once_cell = "1.21"
pest = "2.8"
pest_derive = "2.8"
phf = "0.11"
phf_macros = "0.11"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tabled = "0.18"
tablestream = { git = "https://github.com/gtunes-dev/tablestream" }
threadpool = "1.8"
tico = "2.0"
toml = "0.8"

[build-dependencies]
static_vcruntime = "2.0"