[package]
name = "fspulse"
version = "0.0.10"
edition = "2021"
authors = ["The FsPulse Developers"]
description = "FsPulse is a fast, cross-platform filesystem scanner and change tracker."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gtunes-dev/fspulse"
homepage = "https://github.com/gtunes-dev/fspulse"
keywords = ["filesystem", "scanner", "tracking", "integrity", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
documentation = "https://gtunes-dev.github.io/fspulse/"

exclude = [
  ".github",
  ".gitignore"
]

[[bin]]
name = "fspulse"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
claxon = "0.4"
console = "0.15"
crossbeam-channel = "0.5"
crossterm = "0.29"
dialoguer = { version = "0.11", features = ["history"] }
dunce = "1.0"
directories = "6.0"
figment = { version = "0.10", features = ["toml"] }
flexi_logger = "0.30"
hex = "0.4"
indicatif = "0.17"
image = "0.25"
log = "0.4"
lopdf = "0.36"
md-5 = "0.10"
once_cell = "1.21"
pest = "2.8"
pest_derive = "2.8"
phf = "0.11"
phf_macros = "0.11"
ratatui = "0.29"
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0"
tabled = "0.18"
threadpool = "1.8"
tico = "2.0"
toml = "0.8"

[build-dependencies]
static_vcruntime = "2.0"
